<resources>
    <string name="app_name">Peers Chat</string>
    <string name="email_hint">Enter your Email</string>
    <string name="pass_hint">Enter your Password</string>
    <string name="title_activity_login">Log In</string>
    <string name="action_send">Send Button</string>
    <string name="login">Login....</string>
    <string name="register">Register....</string>
    <!-- Strings related to login -->
    <string name="create_new_account">Register</string>
    <string name="cancel_registeration">Cancel</string>
    <string name="display_name">Enter your Name</string>
    <string name="action_sign_in_short">LOG IN</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_log_in">LogIn</string>
    <!-- LogInActivity-->
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Checking</string>
    <string name="title_activity_chat">Chat</string>

    <string name="action_settings">Settings</string>
    <string name="action_log_out">Log out</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <!-- RegisterActivity-->
    <string name="error_fields_empty">Please make sure you enter display name, email and password!</string>

    <string name="admin_information">Admin information: Name: Maha Abdelshafy
        Email:mahaabdelshafy@yahoo.com
    </string>
    <string name="error_incorrect_email_pass">Provide correct email and password with more than 6 characters.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="widget_title"> Peers Chat </string>
</resources>
