<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="maha.abdelshafy.com.peerschat.login.LogInActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">


    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"

        >


        <EditText
            android:id="@+id/edit_text_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/secondary_text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_text_password_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_marginBottom="24dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/pass_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/secondary_text" />
        >

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_register"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="45dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/action_sign_in_short" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/adView"
            android:layout_marginBottom="30dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/create_new_account" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="35dp"
            android:foregroundGravity="center_horizontal"
            app:adSize="BANNER"
            app:adUnitId="@string/banner_ad_unit_id" />


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>