<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        ​

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapse_main_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleTextAppearance="@style/CollapsingTextAppearance.Inverse"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@string/title_activity_register"

            >

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_main"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="4dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:behavior_overlapTop="78dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/logo"
                app:layout_collapseMode="parallax"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/edit_text_display_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/log_in_margin"
                android:layout_marginRight="@dimen/log_in_margin"
                android:layout_marginTop="40dp"
                android:hint="@string/display_name"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/colorHint" />

            <EditText
                android:id="@+id/edit_text_email_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/log_in_margin"
                android:layout_marginRight="@dimen/log_in_margin"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/colorHint" />

            <EditText
                android:id="@+id/edit_text_password_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/log_in_margin"
                android:layout_marginRight="@dimen/log_in_margin"
                android:ems="10"
                android:hint="@string/pass_hint"
                android:inputType="textPassword"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/colorHint" />

            <Button
                android:id="@+id/btn_register_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:text="@string/create_new_account"
                android:textColor="@color/primary_text" />

            <Button
                android:id="@+id/btn_cancel_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1.39"
                android:background="@color/colorPrimary"
                android:text="@string/cancel_registeration"
                android:textColor="@color/primary_text" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
